--- a/Move.toml
+++ b/Move.toml
@@ -3,7 +3,8 @@ name = "orderbook"
 version = "0.0.1"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet-0.27.1" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "devnet-0.33.0" }
 
 [addresses]
 orderbook="0x0"
+sui ="0x2"
